--- a/style.css
+++ b/style.css
@@ -1,23 +1,73 @@
-body{
-    background:rgba(69, 69, 69)
-}
-.container{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    justify-self: center;
-    align-self: center;
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
+
+*{
+    box-sizing:border-box;
+    padding: 0;
+    margin: 0;
 }
 
-.content{
+body {
+    font-family: 'Nunito', sans-serif;
+    color: #333;
+    line-height: 1.6;
+}
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
+}
+
+h1, h2 {
+    font-weight: 300;
+    line-height: 1.2;
+    margin: 10px 0;
+}
+
+p {
+    margin: 10px 0;
+}
+
+img {
+    width: 100%;
+}
+
+.navbar{
+    background-color: #047aed;
+    color: #fff;
+    height: 70px;
+}
+
+.navbar ul {
     display: flex;
-    width: 1000px;
-    height: 500px;
-    flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.6);
-    justify-self: center;
-    justify-content: center;
-    border-radius: 25px;
+}
+
+.navbar a {
+    color: #fff;
+    padding: 10px;
+    margin: 0 5px;
+}
+
+.navbar a:hover {
+    border-bottom: 2px #fff solid;
+}
+
+.navbar .flex{
+    justify-content: space-between;
+}
+
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    overflow: auto;
+    padding: 0 40px;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    color: white;
+    height: 100%;
 }
