--- a/style.css
+++ b/style.css
@@ -133,6 +133,13 @@ img {
     margin: 10px;
 }
 
+.btn {
+    display: inline-block;
+    padding: 10px 30px;
+    cursor: pointer;
+    background: var(--primary-color);
+}
+
 .flex {
     display: flex;
     justify-content: space-between;
